objects/Staging__c.object
<CustomObject>
    <description>Object to store JSON payloads</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JSON_Payload__c</fullName>
        <description>Jason payload</description>
        <label>JSON Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Partially Processed With Error</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Staging</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>